WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133700
Web Inspector: All-caps CSS properties are not shown in Computed pane
https://bugs.webkit.org/show_bug.cgi?id=133700
Summary
Web Inspector: All-caps CSS properties are not shown in Computed pane
Myles C. Maxfield
Reported
2014-06-10 14:28:39 PDT
Repro steps: 1. Right click on element (see screenshot) 2. Inspect Element 3. In inspector, select parent element "<div class="box" id="box_F027C8DE2BEB48EF920A2635C1BA9172">" 4. Look at "Computed" pane and "Rules" pane. Rules pane shows "top" and "left" attributes (though they are in all caps) Expected: Computed pane should show "top" and "left" attributes Actual: Computed pane does not show "top" and "left" attributes Note that changing the property in the rules pane from "TOP" -> "top" makes it show up in the rules pane.
Attachments
Which element to inspect
(212.70 KB, image/png)
2014-06-10 14:29 PDT
,
Myles C. Maxfield
no flags
Details
Patch
(1.61 KB, patch)
2014-08-04 12:40 PDT
,
Matt Baker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2014-06-10 14:29:16 PDT
Created
attachment 232817
[details]
Which element to inspect
Radar WebKit Bug Importer
Comment 2
2014-06-10 14:29:20 PDT
<
rdar://problem/17257916
>
Joseph Pecoraro
Comment 3
2014-06-10 14:31:27 PDT
Reductions, compare: data:text/html,<body><style>body{BACKGROUND-COLOR:blue}</style> data:text/html,<body><style>body{background-color:blue}</style>
Matt Baker
Comment 4
2014-08-04 12:40:31 PDT
Created
attachment 235981
[details]
Patch
WebKit Commit Bot
Comment 5
2014-08-04 13:50:41 PDT
Comment on
attachment 235981
[details]
Patch Clearing flags on attachment: 235981 Committed
r171999
: <
http://trac.webkit.org/changeset/171999
>
WebKit Commit Bot
Comment 6
2014-08-04 13:50:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug