Web Inspector: All-caps CSS properties are not shown in Computed pane https://bugs.webkit.org/show_bug.cgi?id=133700

Patch by Matt Baker <mattbaker@apple.com> on 2014-08-04
Reviewed by Timothy Hatcher.

* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyle::styleWithProperties):

Canonical link: https://commits.webkit.org/153442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171999 268f45cc-cd09-0410-ab3c-d52691b4dbfc